# protein-design-mcp

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.colabfold  Dockerfile.full  Dockerfile.lite  Dockerfile.patch  PRD.md  README.md  docker-compose.yml  environment.yml  pyproject.toml  setup.sh  smithery.yaml
.github/workflows/: docker-publish.yml  publish-pypi.yml
deploy/: modal_app.py
docker/: download_models.py  entrypoint.sh
src/protein_design_mcp/: __init__.py  exceptions.py  modal_proxy.py  server.py  setup_cli.py
src/protein_design_mcp/pipelines/: __init__.py  alphafold2.py  boltz_runner.py  esm2_scorer.py  esmfold.py  openmm_runner.py  proteinmpnn.py  pyrosetta_runner.py  rfdiffusion.py
src/protein_design_mcp/resources/: __init__.py  structures.py
src/protein_design_mcp/tools/: __init__.py  analyze.py  boltz_predict.py  design_binder.py  design_fold.py  design_sequence.py  energy_minimize.py  hotspots.py  optimize.py  predict_structure.py  rosetta_design.py  rosetta_interface.py  rosetta_relax.py  rosetta_score.py  score_stability.py  status.py  validate.py
src/protein_design_mcp/utils/: __init__.py  cache.py  conservation.py  fetch_structure.py  job_queue.py  metrics.py  pdb.py  pubmed.py  sasa.py  uniprot.py
tests/: __init__.py  test_alphafold2.py  test_analyze.py  test_conservation.py  test_design_binder.py  test_esmfold.py  test_hotspots.py  test_job_queue.py  test_optimize.py  test_pdb_utils.py  test_proteinmpnn.py  test_pubmed.py  test_rfdiffusion.py  test_sasa.py  test_server_handlers.py  test_tools.py  test_uniprot.py  test_validate_design.py
